Atualizado slogan da EJ; alterado logo; modificado método de inserção de dados de contato; enfim, muitas melhorias!

--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 ---
-# Protut Soluções em Energia
+# Protut - Elétrica e Automação
 ---
 <!DOCTYPE html>
 <!--
@@ -14,7 +14,7 @@ Licence URI: https://www.os-templates.com/template-terms
 
 <head>
     <!-- Título desta página -->
-    <title>Página não encontrada - Protut Soluções em Energia</title>
+    <title>Página não encontrada | Protut - Elétrica e Automação</title>
     
     <!-- Tags compartilhadas do cabeçalho -->
     {% include tags_comuns.html %}
