--- a/faq.html
+++ b/faq.html
@@ -1,5 +1,5 @@
 ---
-# Protut Soluções em Energia
+# Protut - Elétrica e Automação
 ---
 <!DOCTYPE html>
 <!--
@@ -14,7 +14,7 @@ Licence URI: https://www.os-templates.com/template-terms
 
 <head>
     <!-- Título desta página -->
-    <title>Perguntas Frequentes - Protut Soluções em Energia</title>
+    <title>Perguntas Frequentes | Protut - Elétrica e Automação</title>
     
     <!-- Tags compartilhadas do cabeçalho -->
     {% include tags_comuns.html %}  
@@ -60,7 +60,7 @@ Licence URI: https://www.os-templates.com/template-terms
         <div class="dropdown">
           <header>Quais serviços a Protut presta?</header>
           <div>
-            <p>A Protut presta diversos serviços nos segmentos de Engenharia Elétrica e Automação. Para conhecer todos os nossos serviços, acesse nossa <a style="display:inline;" href="./servicos.html">página de serviços</a> ou baixe nosso <a style="display:inline;" href="./uploads/portfolio.pdf" download>portfólio em PDF</a>.</p>
+            <p>A Protut presta diversos serviços nos segmentos de Engenharia Elétrica e Automação. Para conhecer todos os nossos serviços, acesse nossa <a style="display:inline;" href="./servicos.html">página de serviços</a> ou baixe nossa <a style="display:inline;" href="./uploads/servicos.pdf" download>carta de serviços em PDF</a>.</p>
           </div>
         </div>
 
