--- a/mej.html
+++ b/mej.html
@@ -1,5 +1,5 @@
 ---
-# Protut Soluções em Energia
+# Protut - Elétrica e Automação
 ---
 <!DOCTYPE html>
 <!--
@@ -14,7 +14,7 @@ Licence URI: https://www.os-templates.com/template-terms
 
 <head>
     <!-- Título desta página -->
-    <title>Movimento Empresa Júnior - Protut Soluções em Energia</title>
+    <title>Movimento Empresa Júnior | Protut - Elétrica e Automação</title>
 
     <!-- Tags compartilhadas do cabeçalho -->
     {% include tags_comuns.html %}    
@@ -61,8 +61,8 @@ Licence URI: https://www.os-templates.com/template-terms
       <ul class="justify">
 		  <li>Soluções personalizadas, desenvolvidas especificamente para atender às suas necessidades.</li>
 		  <li>Produtos e serviços mais acessíveis, uma vez que empresas juniores não têm fins lucrativos.</li>		  
-		  <li>Seus problemas serão resolvidos por estudantes que estão em contato com o que há de mais recente em termos de inovação e tecnologia.</li>		  
-		  <li>Alta qualidade nos serviços prestados, assegurada por estudantes extremamente qualificados e em constante atualização, e pela orientação de uma instituição de ensino superior.</li>
+		  <li>Seus problemas serão resolvidos por pessoas em contato com o que há de mais recente em termos de inovação e tecnologia.</li>		  
+		  <li>Alta qualidade nos serviços prestados, assegurada por pessoal extremamente qualificado e em constante atualização, e pela orientação de uma instituição de ensino superior.</li>
       </ul>
       <p>A Protut oferece soluções nas áreas de Engenharia Elétrica e Automação. Para saber mais, <a href="./servicos.html" style="display: inline;">consulte nossos serviços</a>.</p>
     </div>
