--- a/quem-somos.html
+++ b/quem-somos.html
@@ -1,5 +1,5 @@
 ---
-# Protut Soluções em Energia
+# Protut - Elétrica e Automação
 ---
 <!DOCTYPE html>
 <!--
@@ -14,7 +14,7 @@ Licence URI: https://www.os-templates.com/template-terms
 
 <head>
     <!-- Título desta página -->
-    <title>Quem Somos - Protut Soluções em Energia</title>
+    <title>Quem Somos | Protut - Elétrica e Automação</title>
     
     <!-- Tags compartilhadas do cabeçalho -->
     {% include tags_comuns.html %}
@@ -41,7 +41,7 @@ Licence URI: https://www.os-templates.com/template-terms
       <h3>Nossa história</h3>
       <img class="imgr borderedbox inspace-5" src="./images/timeprotut.jpg" style="width: 400px;" alt="Equipe da Protut reunida">
       <p>A Protut é uma empresa júnior fundada em 2013 por alunos do antigo curso de Engenharia Eletrônica (atual Engenharia Elétrica) da Universidade Tecnológica Federal do Paraná (UTFPR), campus Ponta Grossa. Movidos pelo espírito empreendedor, e ancorados nos valores do Movimento Empresa Júnior (MEJ), buscamos atuar como um elo entre a vida universitária e o mundo profissional, oferecendo aos nossos clientes <b>produtos e serviços personalizados</b>, desenvolvidos por uma equipe de universitários altamente capacitados e empenhados em encontrar as melhores soluções para as necessidades dos nossos clientes.</p>
-      <p>Inicialmente voltada apenas à área da Eletrônica, após o curso de Engenharia Eletrônica ser convertido em Engenharia Elétrica, e nossa empresa passar a incluir membros do curso de Tecnologia em Automação Industrial, atualizamos nossa marca, passando a utilizar o nome <b>Protut Soluções em energia</b>. Uma nova identidade, mas o mesmo compromisso e dedicação aos nossos clientes.</p>
+      <p>Inicialmente voltada apenas à área da Eletrônica, após o curso de Engenharia Eletrônica ser convertido em Engenharia Elétrica, e nossa empresa passar a incluir membros do curso de Tecnologia em Automação Industrial, atualizamos nossa marca, passando a utilizar o nome <b>Protut - Elétrica e Automação</b>. Uma nova identidade, mas o mesmo compromisso e dedicação aos nossos clientes.</p>
       <p><b>Atualmente, oferecemos soluções nas áreas de Engenharia Elétrica e Automação.</b> Seja qual for o seu problema, nós temos a solução ideal para você! <b>Na Protut, nossa prioridade é a sua.</b></p>
       <a href="./servicos.html">Conheça nossos serviços &raquo;</a>
       <a href="./mej.html">Saiba mais sobre o Movimento Empresa Júnior &raquo;</a>
