--- a/servicos.html
+++ b/servicos.html
@@ -1,5 +1,5 @@
 ---
-# Protut Soluções em Energia
+# Protut - Elétrica e Automação
 ---
 <!DOCTYPE html>
 <!--
@@ -14,7 +14,7 @@ Licence URI: https://www.os-templates.com/template-terms
 
 <head>
     <!-- Título desta página -->
-    <title>Serviços - Protut Soluções em Energia</title>
+    <title>Serviços | Protut - Elétrica e Automação</title>
    
     <!-- Tags compartilhadas do cabeçalho -->
     {% include tags_comuns.html %}
@@ -39,7 +39,7 @@ Licence URI: https://www.os-templates.com/template-terms
     <div class="content justify"> 
       <h3>Nossos Serviços</h3>
       <p>Oferecemos soluções inovadoras e personalizadas nas áreas de Engenharia Elétrica e Automação.</p>
-      <p>Confira nossa lista de serviços abaixo ou <a href="./uploads/portfolio.pdf" style="display: inline;" download>baixe nosso portfólio em PDF</a>.</p>
+      <p>Confira nossa lista de serviços abaixo ou <a href="./uploads/servicos.pdf" style="display: inline;" download>baixe nossa carta de serviços em PDF</a>.</p>
       
       <br>
       <h5>Engenharia Elétrica</h5>
