--- a/processo-seletivo.html
+++ b/processo-seletivo.html
@@ -43,6 +43,15 @@ Licence URI: https://www.os-templates.com/template-terms
 	  <p><b>Importante:</b> os membros da Protut, assim como de qualquer outra empresa júnior, atuam de forma voluntária (não remunerada).</p>
 	</div>
 	
+	<div class="content jusp">
+	  <h3>Datas dos Processos Seletivos</h3>
+	  <p>Nossos Processos Seletivos costumam ocorrer ao início de cada semestre letivo da UTFPR campus Ponta Grossa. Para saber quando um novo Processo Seletivo for aberto, por favor, acompanhe as redes sociais da Protut:
+	  <ul>
+		<li><a href="https://instagram.com/protutjr" target="__blank">Instagram</a></li>
+		<li><a href="https://facebook.com/protutjr" target="__blank">Facebook</a></li>
+	  </ul>    
+    </div>
+	
 	<div class="content jusp"> 
       <h3>Etapas do Processo Seletivo</h3>
 	  <p>Nosso Processo Seletivo é composto de 5 etapas, conforme descrito a seguir:</p>
@@ -58,22 +67,11 @@ Licence URI: https://www.os-templates.com/template-terms
 	  <h3>Nossos Setores</h3>
 	  <p>Os aprovados no Processo Seletivo poderão atuar nos seguintes setores:</p>
 	  	  
-	  <p><b>Setor Administrativo-Financeiro:</b> O Setor Administrativo-Financeiro cuida das questões jurídicas e financeiras envolvendo a Protut, sendo responsável pelo controle do fluxo de caixa da empresa, elaboração do planejamento estratégico de faturamento, movimentações financeiras, gerenciamento de questões tributárias e apoio aos demais setores em questões jurídicas (como a elaboração de contratos, por exemplo).</p>
-	  <p><b>Setor Comercial:</b> O Setor Comercial é o canal de interação entre a Protut e nossos clientes e parceiros, sendo responsável pela realização de vendas, gestão dos nossos canais de comunicação com o cliente, avaliação de possíveis parcerias, apresentação do nosso portfólio de produtos e serviços aos clientes interessados e esclarecimento de dúvidas sobre questões comerciais da Protut.</p>
-	  <p><b>Setor de Marketing e Comunicação:</b> O Setor de Marketing e Comunicação zela pela imagem da Protut e atua divulgando nossa empresa júnior, tanto para a comunidade interna da UTFPR Ponta Grossa como para potenciais clientes e parceiros, sendo responsável pela criação de campanhas de marketing, elaboração de material de divulgação, gerenciamento do site e das redes sociais da Protut e apoio aos demais setores na divulgação de suas atividades e na criação de arte digital.</p>
-	  <p><b>Setor de Talentos Humanos:</b> O Setor de Talentos Humanos faz a gestão dos membros da empresa, sendo responsável por avaliações de satisfação e desempenho, organização de processos internos e externos à empresa (como preparação de reuniões, processo seletivo, eleições internas, transferências de setor, etc.), mediação de conflitos entre membros e elaboração de estratégias que reforcem uma cultura organizacional saudável que auxilie o desenvolvimento dos membros da Protut.</p>	  	  
-	  <p><b>Setor de Projetos:</b> O Setor de Projetos atua diretamente na elaboração e construção de projetos, sendo responsável por encontrar as melhores soluções para atender às demandas dos nossos clientes, pelo desenvolvimento produtos e serviços inovadores e de alta qualidade e pela capacitação de seus membros para desenvolverem projetos nas áreas de atuação da Protut.</p>
+	  <p><b>Gestão Interna:</b> O Setor de Gestão Interna cuida de todas as questões jurídicas, financeiras e de recursos humanos envolvendo a Protut, sendo responsável pelo controle do fluxo de caixa da empresa, elaboração das metas, movimentações financeiras, gestão de pessoas, avaliações de desempenho, processos seletivos, entre outras atribuições.</p>
+	  <p><b>Vendas:</b> O Setor de Vendas é responsável pela estratégia comercial e de marketing da empresa. Este setor realiza a gestão das mídias sociais, prospecção ativa e passiva, vendas, campanhas de marketing e relacionamento com o cliente.</p>	  
+	  <p><b>Projetos:</b> O Setor de Projetos atua diretamente na elaboração e construção de projetos, sendo responsável por encontrar as melhores soluções para atender às demandas dos nossos clientes, pelo desenvolvimento produtos e serviços inovadores e pela capacitação de seus membros para desenvolver projetos nas áreas de atuação da Protut.</p>
 	</div>
-	
-	<div class="content jusp">
-	  <h3>Datas dos Processos Seletivos</h3>
-	  <p>Nossos Processos Seletivos costumam ocorrer ao início de cada semestre letivo da UTFPR campus Ponta Grossa. Para saber quando um novo Processo Seletivo for aberto, por favor, acompanhe as redes sociais da Protut:
-	  <ul>
-		<li><a href="https://instagram.com/protutjr" target="__blank">Instagram</a></li>
-		<li><a href="https://facebook.com/protutempresajunior" target="__blank">Facebook</a></li>
-		<!--li><a href="https://protutjr.blogspot.com" target="__blank">Blog da Protut</a></li-->
-	  </ul>    
-    </div>
+		
     <div class="clear"></div>
   </main>
 </div>
