--- a/quem-somos.html
+++ b/quem-somos.html
@@ -49,9 +49,9 @@ Licence URI: https://www.os-templates.com/template-terms
     
     <div class="content jusp">
       <h3>Missão, Visão e Valores</h3>
-      <p><b>Missão:</b> Contribuir para o desenvolvimento profissional e humano dos nossos membros, através da prestação de serviços nas áreas de engenharia elétrica e automação, promovendo o crescimento pessoal através da integração da vida universitária com a vivência empresarial.</p>
-      <p><b>Visão:</b> Ser reconhecidos a nível regional e nacional pelo nosso trabalho de excelência na prestação de serviços e no desenvolvimento pessoal dos nossos membros.</p>
-      <p><b>Valores:</b> Aprimoramento constante, ética, comprometimento, proatividade, profissionalismo e transparência.</p>      	  
+      <p><b>Missão:</b> Ser um canal de transformação na sociedade e na vida de nossos membros, através da combinação entre a prestação de serviços de excelência e a qualificação plena (técnica, social-interpessoal e empreendedora) dos nossos colaboradores.</p>
+      <p><b>Visão:</b> Ser reconhecida em Ponta Grossa e no Paraná como referência pela formação de profissionais competentes e seres humanos comprometidos em causar um impacto positivo no mundo e pela capacidade de encantar os clientes, oferecendo sempre as melhores soluções.</p>
+      <p><b>Valores:</b> Garra, conexão e evolução.</p>      	  
     </div>
     
     <div class="content jusp">
