Problemas de URLs absolutas: alteradas as configurações do Jekyll

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Licence URI: https://www.os-templates.com/template-terms
     <title>Página Inicial | Protut - Elétrica e Automação</title>
 	<meta name="description" content="Empresa Júnior de Engenharia Elétrica e Automação Industrial da UTFPR de Ponta Grossa">
     <!-- Integração GPD - landing page -->
-    <script src="{{ "/js/gpd_landing.js" | absolute_url }}" defer></script>    
+    <script src="{{ "/js/gpd_landing.js" | relative_url }}" defer></script>    
     <!-- Tags compartilhadas do cabeçalho -->
     {% include tags_comuns.html %}    
 </head>
