Updated contact form

--- a/contato.html
+++ b/contato.html
@@ -38,13 +38,13 @@ Licence URI: https://www.os-templates.com/template-terms
   <main class="hoc container clear">     
     <div class="content three_quarter first"> 
       <h3 class="center">Fale conosco</h3>      
-	  <p class="center">Envie-nos uma mensagem online. Responderemos o mais rápido possível.</p>
-	  <section id="contact-form" class="btmspace-30">
-		  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdk0xxc6qV8wY75qFNlFeUU0Lf8afJCQyo8UgMKlU3MD4nJ7Q/viewform?embedded=true" style="width: 100%; min-height: 660px;" frameborder="0" marginheight="0" marginwidth="0">
-			<div id="contact-form-loading">
-			  <p><i class="fa fa-refresh fa-spin"></i> Aguarde um instante. Carregando formulário&hellip;</p>
-		  </div>
-		  </iframe>
+	  <p class="center">Envie-nos uma mensagem online. Responderemos o mais rápido possível.</p>	  
+	  <section id="contact-form" class="btmspace-30">		  
+		<!--div id="contact-form-loading">
+		  <p><i class="fa fa-refresh fa-spin"></i> Aguarde um instante. Carregando formulário&hellip;</p>
+		</div-->
+		<div formsappId="6738041482617bff1d19e790"></div>
+        <script src="https://forms.app/static/embed.js" type="text/javascript" async defer onload="new formsapp('6738041482617bff1d19e790', 'standard', {'width':'100vw','height':'890px'}, 'https://zohcl48o.forms.app');"></script>
 	  </section>
 	  <p>Confira também a nossa página de <a href="./faq.html" style="display:inline;">Perguntas Frequentes</a>.</p>
     </div>
