--- a/faq.html
+++ b/faq.html
@@ -60,7 +60,7 @@ Licence URI: https://www.os-templates.com/template-terms
         <div class="dropdown">
           <header>Quais serviços a Protut presta?</header>
           <div>
-            <p>A Protut presta diversos serviços nos segmentos de Engenharia Elétrica e Automação. Para conhecer todos os nossos serviços, acesse nossa <a style="display:inline;" href="./servicos.html">página de serviços</a> ou baixe nossa <a style="display:inline;" href="./uploads/servicos.pdf" download>carta de serviços em PDF</a>.</p>
+            <p>A Protut presta diversos serviços nos segmentos de Engenharia Elétrica e Automação. Para conhecer todos os nossos serviços, acesse nossa <a style="display:inline;" href="./servicos.html">página de serviços</a> ou baixe nossa <a style="display:inline;" href="https://docs.google.com/document/d/1dSTcu5lPhkXK4PRFg_73-HcuE7dPMOtB7KDzdxNYYSc/export?format=pdf" download>carta de serviços em PDF</a>.</p>
           </div>
         </div>
 
