--- a/processo-seletivo.html
+++ b/processo-seletivo.html
@@ -66,8 +66,9 @@ Licence URI: https://www.os-templates.com/template-terms
 	<div class="content jusp">
 	  <h3>Nossos Setores</h3>
 	  <p>Os aprovados no Processo Seletivo poderão atuar nos seguintes setores:</p>
-	  	  
-	  <p><b>Gestão Interna:</b> O Setor de Gestão Interna cuida de todas as questões jurídicas, financeiras e de recursos humanos envolvendo a Protut, sendo responsável pelo controle do fluxo de caixa da empresa, elaboração das metas, movimentações financeiras, gestão de pessoas, avaliações de desempenho, processos seletivos, entre outras atribuições.</p>
+	  	  	  
+	  <p><b>Administrativo-Financeiro:</b> O Setor Administrativo-Financeiro cuida das questões jurídicas e financeiras envolvendo a Protut, sendo responsável pelo controle do fluxo de caixa da empresa, elaboração do planejamento estratégico de faturamento, movimentações financeiras, gerenciamento de questões tributárias e apoio aos demais setores em questões jurídicas (como a elaboração de contratos, por exemplo).</p>
+	  <p><b>Talentos Humanos:</b> O Setor de Talentos Humanos faz a gestão dos membros da empresa, sendo responsável por avaliações de satisfação e desempenho, organização de processos internos e externos à empresa (como preparação de reuniões, processo seletivo, eleições, transferências de setor, etc.), mediação de conflitos entre membros e elaboração de estratégias que reforcem uma cultura organizacional saudável que auxilie o desenvolvimento dos membros da Protut.</p>	
 	  <p><b>Vendas:</b> O Setor de Vendas é responsável pela estratégia comercial e de marketing da empresa. Este setor realiza a gestão das mídias sociais, prospecção ativa e passiva, vendas, campanhas de marketing e relacionamento com o cliente.</p>	  
 	  <p><b>Projetos:</b> O Setor de Projetos atua diretamente na elaboração e construção de projetos, sendo responsável por encontrar as melhores soluções para atender às demandas dos nossos clientes, pelo desenvolvimento produtos e serviços inovadores e pela capacitação de seus membros para desenvolver projetos nas áreas de atuação da Protut.</p>
 	</div>
