correção das meta tags viewport

--- a/faq.html
+++ b/faq.html
@@ -19,7 +19,7 @@ Licence URI: https://www.os-templates.com/template-terms
 	<link rel="icon" href="./favicon.svg" type="image/svg+xml">
 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- CSS -->
     <link href="./css/layout.css" rel="stylesheet" type="text/css" media="all">
