--- a/servicos.html
+++ b/servicos.html
@@ -111,8 +111,8 @@ Licence URI: https://www.os-templates.com/template-terms
                 <p>
                   A automação de processos industriais garante uma maior
                   eficiência na produção, aumenta a segurança e a produtividade
-                  e proporciorna economia. Na Protut, realizamos uma avaliação
-                  de todo o seu processo e identificamos quais partes podem ser
+                  e proporciona economia. Na Protut, realizamos uma avaliação de
+                  todo o seu processo e identificamos quais partes podem ser
                   automatizadas. Também projetamos sistemas de automação e
                   acompanhamos sua implementação no chão de fábrica.
                 </p>
