--- a/faq.html
+++ b/faq.html
@@ -1,6 +1,7 @@
 ---
 # Protut - Elétrica e Automação
 ---
+
 <!DOCTYPE html>
 <!--
 Template Name: Edgpress
@@ -10,98 +11,164 @@ Licence: Free to use under our free template licence terms
 Licence URI: https://www.os-templates.com/template-terms
 -->
 
-<html lang="pt">
-
-<head>
+<html lang="pt-BR">
+  <head>
     <!-- Título desta página -->
     <title>Perguntas Frequentes | Protut - Elétrica e Automação</title>
-    
+
     <!-- Tags compartilhadas do cabeçalho -->
-    {% include tags_comuns.html %}  
-</head>
+    {% include tags_comuns.html %}
+  </head>
 
-<body id="top">
+  <body id="top">
+    <!-- Cabeçalho da página -->
+    {% include header.html %}
 
-<!-- Cabeçalho da página -->
-{% include header.html %}
-
-<div class="wrapper orange-gradient">
-  <section id="breadcrumb" class="hoc clear"> 
-	<ul>
-	  <li><a href="./index.html">Página Inicial</a></li>
-	  <li><a href="./faq.html">Perguntas Frequentes</a></li>		  
-	</ul>
-	<h4>Perguntas Frequentes (FAQ)</h4>
-  </section>
-</div>
-
-<div class="wrapper row3">
-  <main class="hoc container clear">     
-    <div class="content jusp"> 
-      
-      <h3>Perguntas Frequentes</h3>     
-      <p>Encontre a resposta para dúvidas comuns sobre a Protut.</p>
-
-      <section class="dropdown-container">        
-        <div class="dropdown">
-          <header>O que é a Protut?</header>
-          <div>
-            <p>A Protut é uma Empresa Júnior (EJ) de Engenharia Elétrica e Automação, vinculada à UTFPR campus Ponta Grossa. Para saber mais sobre a nossa história, <a style="display:inline;" href="./quem-somos.html">clique aqui</a>.</p>
-          </div>
-        </div>
-
-        <div class="dropdown">
-          <header>Quero contratar a Protut, como proceder?</header>
-          <div>
-            <p>Por favor, entre em contato conosco através da nossa <a style="display:inline;" href="./contato.html">página de contato</a>. Nosso time comercial terá o maior prazer em atendê-lo.</p>
-          </div>
-        </div>
-
-        <div class="dropdown">
-          <header>Quais serviços a Protut presta?</header>
-          <div>
-            <p>A Protut presta diversos serviços nos segmentos de Engenharia Elétrica e Automação. Para conhecer todos os nossos serviços, acesse nossa <a style="display:inline;" href="./servicos.html">página de serviços</a> ou baixe nossa <a style="display:inline;" href="https://docs.google.com/document/d/1dSTcu5lPhkXK4PRFg_73-HcuE7dPMOtB7KDzdxNYYSc/export?format=pdf" download>carta de serviços em PDF</a>.</p>
-          </div>
-        </div>
-
-        <div class="dropdown">
-          <header>Quem faz parte da Protut?</header>
-          <div>
-            <p>A Protut é composta por alunos da Universidade Tecnológica Federal do Paraná (UTFPR), campus Ponta Grossa, dos cursos de Engenharia Elétrica e Tecnologia em Automação Industrial.</p>
-          </div>
-        </div>
-
-        <div class="dropdown">
-          <header>Quero participar da Protut, o que devo fazer?</header>
-          <div>
-            <p>A Protut está de portas abertas para os alunos de Engenharia Elétrica e Automação Industrial da UTFPR Ponta Grossa, inclusive calouros. Para participar da Protut você deve se inscrever em nosso Processo Seletivo. <a style="display:inline;" href="./processo-seletivo.html">Clique aqui</a> para mais informações.</p>
-          </div>
-        </div>
-
-        <div class="dropdown">
-          <header>Quando ocorrerá o próximo Processo Seletivo da Protut?</header>
-          <div>
-            <p>Costumamos abrir Processos Seletivos no início de cada semestre letivo da UTFPR Ponta Grossa. Para saber mais sobre as datas específicas de nossos processos seletivos, confira <!-- nosso blog e -->nossas redes sociais. Para mais informações sobre o funcionamento do nosso Processo Seletivo, <a style="display:inline;" href="./processo-seletivo.html">clique aqui</a>.</p>
-          </div>
-        </div>
-
-        <div class="dropdown">
-          <header>Faço parte de outra EJ e quero marcar um <i>benchmark</i> com a Protut, como proceder?</header>
-          <div>
-            <p>Por favor, entre em contato conosco através da nossa <a style="display:inline;" href="./contato.html">página de contato</a> ou pelo nosso <a style="display:inline;" href="https://instagram.com/protutjr" target="__blank">Instagram</a>. Teremos o maior prazer em agendar um horário e trocar experiências com a sua EJ.</p>
-          </div>
-        </div>   
-
+    <div class="wrapper orange-gradient">
+      <section id="breadcrumb" class="hoc clear">
+        <ul>
+          <li><a href="./index.html">Página Inicial</a></li>
+          <li><a href="./faq.html">Perguntas Frequentes</a></li>
+        </ul>
+        <h4>Perguntas Frequentes (FAQ)</h4>
+      </section>
     </div>
-    <div class="clear"></div>
-    <script src="./js/dropdown.js" defer></script>
-  </main>
-</div>
 
-<!-- Rodapé da página -->
-{% include footer.html %}
+    <div class="wrapper row3">
+      <main id="conteudo-principal" tabindex="-1" class="hoc container clear">
+        <div class="content jusp">
+          <h3>Perguntas Frequentes</h3>
+          <p>Encontre a resposta para dúvidas comuns sobre a Protut.</p>
 
-<!-- Botão p/ voltar ao topo da página -->
-<a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
-</body>
+          <section class="dropdown-container">
+            <div class="dropdown">
+              <header>O que é a Protut?</header>
+              <div>
+                <p>
+                  A Protut é uma Empresa Júnior (EJ) de Engenharia Elétrica e
+                  Automação, vinculada à UTFPR campus Ponta Grossa. Para saber
+                  mais sobre a nossa história,
+                  <a style="display: inline" href="./quem-somos.html"
+                    >clique aqui</a
+                  >.
+                </p>
+              </div>
+            </div>
+
+            <div class="dropdown">
+              <header>Quero contratar a Protut, como proceder?</header>
+              <div>
+                <p>
+                  Por favor, entre em contato conosco através da nossa
+                  <a style="display: inline" href="./contato.html"
+                    >página de contato</a
+                  >. Nosso time comercial terá o maior prazer em atendê-lo.
+                </p>
+              </div>
+            </div>
+
+            <div class="dropdown">
+              <header>Quais serviços a Protut presta?</header>
+              <div>
+                <p>
+                  A Protut presta diversos serviços nos segmentos de Engenharia
+                  Elétrica e Automação. Para conhecer todos os nossos serviços,
+                  acesse nossa
+                  <a style="display: inline" href="./servicos.html"
+                    >página de serviços</a
+                  >
+                  ou baixe nossa
+                  <a
+                    style="display: inline"
+                    href="https://docs.google.com/document/d/1dSTcu5lPhkXK4PRFg_73-HcuE7dPMOtB7KDzdxNYYSc/export?format=pdf"
+                    download
+                    >carta de serviços em PDF</a
+                  >.
+                </p>
+              </div>
+            </div>
+
+            <div class="dropdown">
+              <header>Quem faz parte da Protut?</header>
+              <div>
+                <p>
+                  A Protut é composta por alunos da Universidade Tecnológica
+                  Federal do Paraná (UTFPR), campus Ponta Grossa, dos cursos de
+                  Engenharia Elétrica e Tecnologia em Automação Industrial.
+                </p>
+              </div>
+            </div>
+
+            <div class="dropdown">
+              <header>Quero participar da Protut, o que devo fazer?</header>
+              <div>
+                <p>
+                  A Protut está de portas abertas para os alunos de Engenharia
+                  Elétrica e Automação Industrial da UTFPR Ponta Grossa,
+                  inclusive calouros. Para participar da Protut você deve se
+                  inscrever em nosso Processo Seletivo.
+                  <a style="display: inline" href="./processo-seletivo.html"
+                    >Clique aqui</a
+                  >
+                  para mais informações.
+                </p>
+              </div>
+            </div>
+
+            <div class="dropdown">
+              <header>
+                Quando ocorrerá o próximo Processo Seletivo da Protut?
+              </header>
+              <div>
+                <p>
+                  Costumamos abrir Processos Seletivos no início de cada
+                  semestre letivo da UTFPR Ponta Grossa. Para saber mais sobre
+                  as datas específicas de nossos processos seletivos, confira
+                  <!-- nosso blog e -->nossas redes sociais. Para mais
+                  informações sobre o funcionamento do nosso Processo Seletivo,
+                  <a style="display: inline" href="./processo-seletivo.html"
+                    >clique aqui</a
+                  >.
+                </p>
+              </div>
+            </div>
+
+            <div class="dropdown">
+              <header>
+                Faço parte de outra EJ e quero marcar um <i>benchmark</i> com a
+                Protut, como proceder?
+              </header>
+              <div>
+                <p>
+                  Por favor, entre em contato conosco através da nossa
+                  <a style="display: inline" href="./contato.html"
+                    >página de contato</a
+                  >
+                  ou pelo nosso
+                  <a
+                    style="display: inline"
+                    href="https://instagram.com/protutjr"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Instagram</a
+                  >. Teremos o maior prazer em agendar um horário e trocar
+                  experiências com a sua EJ.
+                </p>
+              </div>
+            </div>
+          </section>
+        </div>
+        <div class="clear"></div>
+        <script src="./js/dropdown.js" defer></script>
+      </main>
+    </div>
+
+    <!-- Rodapé da página -->
+    {% include footer.html %}
+
+    <!-- Botão p/ voltar ao topo da página -->
+    <a id="backtotop" href="#top" aria-label="Voltar ao topo"
+      ><i aria-hidden="true" class="fa fa-chevron-up"></i
+    ></a>
+  </body>
 </html>
