--- a/links.html
+++ b/links.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
+  <head>
+    <title>Links Protut</title>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+    <meta http-equiv="refresh" content="0; URL=https://linktr.ee/Protut" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
 
-<head>
-	<title>Links Protut</title>
-	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-	<meta http-equiv="refresh" content="0; URL=https://linktr.ee/Protut">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+  <body>
+    <style>
+      body {
+        background-color: #ebeef1;
+      }
+      body * {
+        display: none;
+      }
+    </style>
 
-<body>	
-	<style>
-		body { background-color: #EBEEF1; }
-		body * { display: none; }
-	</style>
-	
-	<h1>Links Rápidos | Protut empresa júnior</h1>
-	<p>Acesse rapidamente os principais links das nossas redes sociais e canais de comunicação.</p>
-
-</body>
-
+    <h1>Links Rápidos | Protut empresa júnior</h1>
+    <p>
+      Acesse rapidamente os principais links das nossas redes sociais e canais
+      de comunicação.
+    </p>
+  </body>
 </html>
